--- a/config/app.yml
+++ b/config/app.yml
@@ -4,7 +4,7 @@ all:
     use_ajax:            true  # enable posting of comments in Ajax
     max_recent:          5     # number of comments to display in the recent sidebar widget
     enable:              true  # enable comments by default on new commentable object
-    use_gravatar:        true  # use gravatar (depend on sfGravatarPlugin)                       
+    use_gravatar:        true  # use gravatar (depend on sfGravatarPlugin)
     automoderation:      first_post  # triggers the automoderation of comments. Possible values are:
                          # true: comments are not published until a moderator accepts them
                          # first_post: the first comment of a user must be accepted, subsequent posts are accepted automatically
@@ -21,6 +21,7 @@ all:
                                  # true: send an email for every posted comment
                                  # moderated: send an email for every automoderated comment
 #    from_email:          johndoe@xmail.com
+    use_packaged_style:   true
     allowed_tags:
       a:              <a>
       blockquote:     <blockquote>
